# cmaketests

./: README.md
modules/: CMakeLists.txt  cmake_specific.txt
modules/app/: CMakeLists.txt
modules/app/src/: app.cpp
modules/core/: CMakeLists.txt
modules/core/include/: corefuncs.h
modules/core/src/: corefuncs.cpp
modules/core/tests/: test_main.cpp
modules/maths/: CMakeLists.txt
modules/maths/include/: mathfuncs.h
modules/maths/src/: mathfuncs.cpp
